first push, can split given word into letters, trying to figure out how to do the rest and messing around using the design recipe im learning in online course

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Phoneticizer</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
+    <!--<link rel="stylesheet" href="css/style.css"> -->
   </head>
   <body>
     <script src="js/name.js"></script>
